<resources>
    <string name="app_name">Розклад КПІ</string>
    <string name="group_name">Назва групи</string>
    <string name="Schedule">Розклад занять</string>
    <string name="kpi_logo">КПІ лого</string>
    <string name="Monday">Понеділок</string>
    <string name="toast_write_group">Введіть назву групи</string>
    <string name="toast_group_not_found">Группа не знайдена</string>
    <string name="first_week">Перший тиждень</string>
    <string name="second_week">Другий тиждень</string>
    <string name="change_group">Сменить группу</string>
    <string name="lesson">lesson</string>
    <string name="zoom">Ссылка Zoom</string>
    <string name="edit">edit</string>
    <string name="link">link</string>
    <string name="navigation">navigation</string>
    <string name="type_of_lesson">type_of_lesson</string>
    <string name="teacher">teacher</string>
    <string name="save_zoom">save zoom</string>
</resources>
